add feature update head and manage of department
